--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,8 +9,8 @@
     <item
         android:id="@+id/report"
         android:enabled="true"
-        android:icon="@drawable/ic_diagram"
-        android:title="@string/report_title"/>
+        android:icon="@drawable/ic_run"
+        android:title="@string/running_title"/>
     <item
         android:id="@+id/setting"
         android:enabled="true"
