feat) training fragment 1,2,3 recyclerview setadapter

--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -2,18 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
+        android:layout_height="200dp"
         android:layout_weight="2"
-        >
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="초급 : 뱃살 빼기 "
+            android:textAlignment="center"
+            android:textColor="#B3E5FC"
+            android:textSize="16sp" />
+
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:src="@drawable/physical_tst"
+            android:src="@drawable/batsal"
 
             />
     </LinearLayout>
@@ -21,6 +31,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/training1_recyclerview"
         android:layout_width="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="5"
         android:layout_height="0dp"/>
 </LinearLayout>
