--- a/app/src/main/res/layout/training.xml
+++ b/app/src/main/res/layout/training.xml
@@ -10,19 +10,17 @@
         android:id="@+id/training_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="2">
+        android:layout_weight="5">
 
     </androidx.viewpager.widget.ViewPager>
+
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/training_indicator"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
         app:ci_width="5dp"
-
+        android:layout_marginBottom="10dp"
         />
 
 
