--- a/app/src/main/res/layout/training.xml
+++ b/app/src/main/res/layout/training.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C8E6C9"
     android:orientation="vertical">
 
     <androidx.viewpager.widget.ViewPager
@@ -18,13 +18,9 @@
         android:id="@+id/training_indicator"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:ci_width="5dp"
         android:layout_marginBottom="10dp"
-        />
-
-
-
+        android:layout_weight="1"
+        app:ci_width="5dp" />
 
 
 </LinearLayout>
