--- a/app/src/main/res/layout/training_level3.xml
+++ b/app/src/main/res/layout/training_level3.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="50dp"
             android:text="상급 : 식스팩 복근 "
             android:textAlignment="center"
-            android:textColor="#B3E5FC"
+            android:textColor="#FFAB91"
             android:textSize="16sp" />
 
         <ImageView
