--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -5,12 +5,12 @@
   
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_weight="2"
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
@@ -20,6 +20,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/training_level1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
