--- a/app/src/main/res/layout/training_level3.xml
+++ b/app/src/main/res/layout/training_level3.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_weight="2"
         android:orientation="vertical">
 
@@ -21,6 +21,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/training_level3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
