--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-
+    android:id="@+id/loading_back"
     android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/image_loading"
         android:layout_width="match_parent"
@@ -11,5 +12,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         app:srcCompat="@android:drawable/ic_lock_lock" />
+    <!--
+        android:scaleType="fitXY"
+        -->
+
+
 </LinearLayout>
