fix) design color fix.......;;;
은솔씨 이거색깔 매칭점 도와쥬욤 ㅜㅜ 배치라던지

--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -16,7 +16,9 @@
             android:layout_marginTop="50dp"
             android:text="초급 : 뱃살 빼기 "
             android:textAlignment="center"
-            android:textColor="#FFAB91"
+            android:textStyle="bold"
+            android:textColor="#009688"
+
             android:textSize="16sp" />
 
         <ImageView
