--- a/app/src/main/res/layout/training_level2.xml
+++ b/app/src/main/res/layout/training_level2.xml
@@ -16,7 +16,8 @@
             android:layout_marginTop="50dp"
             android:text="중급 : 단단한 복근 "
             android:textAlignment="center"
-            android:textColor="#FFAB91"
+            android:textStyle="bold"
+            android:textColor="#009688"
             android:textSize="16sp" />
 
         <ImageView
