--- a/app/src/main/res/layout/diet_dialog.xml
+++ b/app/src/main/res/layout/diet_dialog.xml
@@ -1,60 +1,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-     >
+    android:background="#DCEDC8"
+    android:orientation="vertical">
+
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/ganji_title"
-        android:textSize="20sp"
-        />
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="20sp" />
+
     <TextView
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textAlignment="center"
+        android:layout_marginTop="8dp"
         android:text="@string/ganji_sulmyung"
-        />
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="12sp" />
+
     <ImageView
-        android:layout_margin="10dp"
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:scaleType="fitCenter" />
+
     <ImageView
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:id="@+id/image2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:scaleType="fitCenter" />
+
     <TextView
         android:id="@+id/text"
-        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#000" />
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="20sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
         android:orientation="horizontal">
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:text="취소" />
+            android:text="취소"
+            android:visibility="invisible" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/dialog_OK"
