--- a/app/src/main/res/layout/training.xml
+++ b/app/src/main/res/layout/training.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8E6C9"
+    android:background="#A5D6A7"
     android:orientation="vertical">
 
     <androidx.viewpager.widget.ViewPager
@@ -14,7 +14,7 @@
         android:layout_weight="5">
 
     </androidx.viewpager.widget.ViewPager>
-  
+
     <me.relex.circleindicator.CircleIndicator
         android:id="@+id/training_indicator"
         android:layout_width="match_parent"
