--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -9,12 +9,10 @@
         android:id="@+id/image_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="40dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+
         app:srcCompat="@android:drawable/ic_lock_lock" />
     <!--
         android:scaleType="fitXY"
