--- a/app/src/main/res/layout/activity_training_batsal.xml
+++ b/app/src/main/res/layout/activity_training_batsal.xml
@@ -1,19 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#FFCDD2"
-    tools:actionBarNavMode="standard">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#FFCDD2">
 
+    <ScrollView
+    android:layout_width="match_parent"
+    tools:actionBarNavMode="standard"
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
 
         <TextView
-
             android:id="@+id/testtext1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,13 +24,14 @@
             android:layout_marginTop="5dp"
             android:text="gg"
             android:textAlignment="center"
-            android:textSize="30sp"
+            android:textColor="#7E57C2"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/batsal_image"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="280dp"
             android:layout_margin="5dp" />
 
         <TextView
@@ -44,6 +48,18 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5" />
+        <Button
+            android:id="@+id/batsal_training_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="7dp"
+            android:background="@drawable/round"
+            android:text="시작"
+            android:textAlignment="center" />
     </LinearLayout>
+
 </ScrollView>
+
+
+</LinearLayout>
 
