--- a/app/src/main/res/layout/training1_listitem.xml
+++ b/app/src/main/res/layout/training1_listitem.xml
@@ -26,6 +26,7 @@
 
         <TextView
             android:id="@+id/textView2"
+            android:layout_marginTop="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
