--- a/app/src/main/res/layout/activity_training_batsal.xml
+++ b/app/src/main/res/layout/activity_training_batsal.xml
@@ -5,17 +5,23 @@
     android:orientation="vertical"
     android:background="#FFCDD2">
 
-    <ScrollView
-    android:layout_width="match_parent"
-    tools:actionBarNavMode="standard"
-    android:layout_height="wrap_content">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical">
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
         <TextView
             android:id="@+id/testtext1"
             android:layout_width="match_parent"
@@ -48,17 +54,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5" />
+            </LinearLayout>
+        </ScrollView>
         <Button
             android:id="@+id/batsal_training_start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_margin="7dp"
             android:background="@drawable/round"
             android:text="시작"
             android:textAlignment="center" />
     </LinearLayout>
 
-</ScrollView>
+
 
 
 </LinearLayout>
