--- a/app/src/main/res/layout/activity_after_traning__batsal.xml
+++ b/app/src/main/res/layout/activity_after_traning__batsal.xml
@@ -13,6 +13,7 @@
     <ImageView
         android:id="@+id/batsal_mainIMG"
         android:layout_width="match_parent"
+        android:layout_margin="5dp"
         android:scaleType="fitXY"
         android:layout_height="match_parent" />
 
