--- a/app/src/main/res/layout/activity_after_traning__batsal.xml
+++ b/app/src/main/res/layout/activity_after_traning__batsal.xml
@@ -70,6 +70,7 @@
          android:textAlignment="center"
          android:textStyle="bold"
          android:text="여기에 타이머"
+         android:id="@+id/batsal_timer"
          android:layout_marginTop="30dp"
          />
       <RelativeLayout
