--- a/app/src/main/res/layout/activity_after_traning__batsal.xml
+++ b/app/src/main/res/layout/activity_after_traning__batsal.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFEBEE"
     android:orientation="vertical"
     tools:context=".after_traning_Batsal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:layout_margin="4dp"
+        android:background="@drawable/circle">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/batsal_mainIMG"
@@ -42,6 +49,7 @@
             />
     </LinearLayout>
     </RelativeLayout>
+    </LinearLayout>
     <LinearLayout
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -98,6 +106,28 @@
               android:layout_alignParentBottom="true"
               android:id="@+id/batsal_next"
               android:src="@drawable/ic_next"/>
+            <TextView
+
+                android:layout_marginTop="3dp"
+                android:id="@+id/givemefifteen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="휴식시간 초기화"
+                android:textStyle="bold"
+                android:textColor="@color/blue"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:visibility="invisible"
+                />
+          <ImageView
+              android:id="@+id/batsal_fifteen"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerVertical="true"
+              android:layout_centerInParent="true"
+              android:layout_centerHorizontal="true"
+              android:visibility="invisible"
+              android:src="@drawable/ic_fifteen" />
       </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
