--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -2,14 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-  
+
+  <androidx.core.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical"
+          android:descendantFocusability="blocksDescendants"
+          >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:background="@drawable/circle"
+        android:layout_margin="3dp"
         android:orientation="vertical">
 
         <TextView
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -17,21 +28,22 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="#009688"
-
             android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/training_level1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="4dp"
             android:src="@drawable/batsal"
+
             />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/training1_recyclerview"
         android:layout_width="match_parent"
-        android:layout_weight="5"
-        android:layout_height="0dp"/>
+        android:layout_height="wrap_content"/>
+      </LinearLayout>
+  </androidx.core.widget.NestedScrollView>
 </LinearLayout>
