--- a/app/src/main/res/layout/training1_listitem.xml
+++ b/app/src/main/res/layout/training1_listitem.xml
@@ -4,8 +4,10 @@
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:gravity="center_vertical"
-    android:layout_marginBottom="8dp"
-    android:background="@android:color/white">
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp"
+    android:background="@drawable/circle">
 
     <LinearLayout
         android:layout_width="0dp"
