--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-  <androidx.core.widget.NestedScrollView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/batsal" />
+    <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:orientation="vertical"
+          android:id="@+id/Linear_a"
           android:descendantFocusability="blocksDescendants"
           >
     <LinearLayout
@@ -17,6 +28,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/circle"
         android:layout_margin="3dp"
+        android:id="@+id/Linear_b"
         android:orientation="vertical">
 
         <TextView
@@ -38,12 +50,16 @@
             android:src="@drawable/batsal"
 
             />
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/training1_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+
       </LinearLayout>
+
   </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+</RelativeLayout>
