update) bug fix

--- a/app/src/main/res/layout/ilboon_recycle.xml
+++ b/app/src/main/res/layout/ilboon_recycle.xml
@@ -2,6 +2,8 @@
     android:id="@+id/recycle_1boon"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="60dp"
     android:scrollbars="vertical" />
