--- a/app/src/main/res/layout/home_training_all.xml
+++ b/app/src/main/res/layout/home_training_all.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="2dp"
+    android:background="@drawable/circle"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
