--- a/app/src/main/res/layout/home_training_all.xml
+++ b/app/src/main/res/layout/home_training_all.xml
@@ -15,9 +15,9 @@
 
         <ImageView
             android:id="@+id/ilboon_thumbnail"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="4dp" />
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_margin="2dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,12 +31,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="제목 : " />
-
-                <TextView
                     android:id="@+id/ilboon_title"
+                    android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -45,4 +41,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
