--- a/app/src/main/res/layout/home_training_all.xml
+++ b/app/src/main/res/layout/home_training_all.xml
@@ -10,36 +10,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="4dp">
 
         <ImageView
             android:id="@+id/ilboon_thumbnail"
-            android:layout_width="120dp"
-            android:layout_height="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/ilboon_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/ilboon_title"
-                    android:textSize="14sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-
+            android:textAlignment="center"
+            android:textColor="#00ACC1"
+            android:textSize="14sp"
+            android:textStyle="bold" />
         </LinearLayout>
 
-    </LinearLayout>
+
 
 </androidx.cardview.widget.CardView>
