--- a/app/src/main/res/layout/activity_lottie_.xml
+++ b/app/src/main/res/layout/activity_lottie_.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="1boon 카카오 페이지의 홈트레이닝 검색결과를 정확도 기준으로 20개의 포스팅을 크롤링한 결과를 나타내어줍니다."
+        android:text="1boon 카카오 페이지의 운동 검색결과를 정확도 기준으로 20개의 포스팅을 크롤링한 결과를 나타내어줍니다."
         android:textAlignment="center"
         android:textColor="#039BE5"
         android:textSize="13sp" />
