Deprecated modify &&gitignore :wrench:

--- a/app/src/main/res/layout/home_training_all.xml
+++ b/app/src/main/res/layout/home_training_all.xml
@@ -26,7 +26,8 @@
             android:textAlignment="center"
             android:textColor="#00ACC1"
             android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="center_horizontal" />
         </LinearLayout>
 
 
