--- a/app/src/main/res/layout/training_level1.xml
+++ b/app/src/main/res/layout/training_level1.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="초급 : 뱃살 빼기 "
+            android:typeface="monospace"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="#009688"
