--- a/app/src/main/res/layout/training_level2.xml
+++ b/app/src/main/res/layout/training_level2.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="중급 : 단단한 복근 "
+            android:typeface="monospace"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="#009688"
