--- a/app/src/main/res/layout/training_level3.xml
+++ b/app/src/main/res/layout/training_level3.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="상급 : 식스팩 복근 "
+            android:typeface="monospace"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="#009688"
